k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend-service
    namespace: exsys-production
spec:
    type: ClusterIP
    selector:
        app: frontend-deployment
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000
